todo_services_and_ingress/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30002
    protocol: TCP
  selector:
    app: webapp-1-0-pod
